# mtg_deck_analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.zed/: settings.json
mtg_deck_analyzer/: __init__.py  __main__.py  admin.py  app.py  apps.py  asgi.py  cards.py  cli.py  config.py  constants.py  context_processors.py  db_cache.py  decklist.py  gemini.py  logging_context.py  models.py  pdf.py  pipeline.py  scryfall.py  service.py  settings.py  settings_test.py  text_utils.py  urls.py  views.py  wsgi.py
mtg_deck_analyzer/caching/: __init__.py  db_cache.py  file_cache.py
mtg_deck_analyzer/domain/: __init__.py  constants.py  decklist.py
mtg_deck_analyzer/integrations/: __init__.py  gemini.py  scryfall.py
mtg_deck_analyzer/migrations/: 0001_initial.py  0002_deck_status_error.py  0003_alter_deck_id.py
mtg_deck_analyzer/rendering/: __init__.py  pdf.py
mtg_deck_analyzer/templates/: base.html  create.html  deck.html  deck_failed.html  edit.html  index.html  login.html
mtg_deck_analyzer/templates/partials/: brand_mark.html  card_image_modal.html  confirm_modal.html  deck_list.html  design_head.html  form_error.html  status_badge.html
mtg_deck_analyzer/templates/registration/: login.html
mtg_deck_analyzer/web/: __init__.py  __main__.py  app.py  db.py  models.py  storage.py
mtg_deck_analyzer/web/templates/: deck.html
mtg_deck_analyzer/web/templates/partials/: form_error.html
tests/: test_auth.py  test_cache.py  test_cards.py  test_config.py  test_constants.py  test_decklist.py  test_pdf.py  test_scryfall.py  test_storage.py  test_text_utils.py  test_web.py
theme/static_src/src/: styles.css
