[project]
name = "mtg-deck-analyzer"
version = "0.1.0"
description = "FastAPI web app that analyzes MTG decklists (Scryfall + Gemini) and renders reports with a PDF download"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.10.0",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "markdown>=3.6",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.2.0",
]

[project.scripts]
mtg-deck-analyzer = "mtg_deck_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtg_deck_analyzer"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
