[project]
name = "mtg-deck-analyzer"
version = "0.1.0"
description = "Django web app that analyzes MTG decklists (Scryfall + Gemini) and renders reports with a PDF download"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.10.0",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "django>=5.1",
    "psycopg[binary]>=3.2.0",
    "markdown>=3.6",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mtg-deck-analyzer = "mtg_deck_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtg_deck_analyzer"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "mtg_deck_analyzer.settings_test"
